# cse481wi18

./: README.md
applications/: CMakeLists.txt  nav_rviz.launch  package.xml
applications/config/: navigation.rviz
applications/maps/: playground.yaml
applications/scripts/: a5_obstacles.py  arm_demo.py  arm_obstacle_demo.py  base_demo.py  cart_arm_demo.py  check_cart_pose.py  drive_demo.py  ee_pose_demo.py  gripper_demo.py  gripper_teleop.py  hallucinated_reach.py  head_demo.py  hello_world.py  interactive_marker_demo.py  joint_reader_demo.py  keyboard_teleop.py  marker_demo.py  path_viz.py  publish_saved_cloud.py  sound_demo.py  straight_gripper_motion_demo.py  torso_demo.py  transformation_demo.py
collada_web_server/: CMakeLists.txt  Caddyfile  package.xml  run_caddy.bash
collada_web_server/fetch_description/cmake/: fetch_descriptionConfig-version.cmake  fetch_descriptionConfig.cmake
course_setup/: README.md  cse481c.bashrc  install_cse481c.bash
fetch_api/: CMakeLists.txt  package.xml  setup.py
fetch_api/config/: fetch_move_base.yaml  kinematics.yaml
fetch_api/launch/: fetch_nav.launch  move_base.launch.xml  move_group.launch  planning_context.launch
fetch_api/scripts/: navigation_controller.py
fetch_api/src/fetch_api/: __init__.py  arm.py  arm_joints.py  base.py  gripper.py  gripper_viz.py  head.py  moveit_goal_builder.py  sound.py  torso.py
joint_state_reader/: CMakeLists.txt  package.xml  setup.py
joint_state_reader/src/joint_state_reader/: __init__.py  reader.py
map_annotator/: CMakeLists.txt  package.xml
map_annotator/frontend/: README.md  bower.json  index.html  manifest.json
map_annotator/frontend/src/: map-annotator-app.html  map-annotator-pose.html
map_annotator/frontend/test/map-annotator-app/: map-annotator-app_test.html
map_annotator/launch/: map_annotator.launch
map_annotator/msg/: PoseNames.msg  UserAction.msg
map_annotator/scripts/: server.py
maps/: sieg_3.pgm  sieg_3.yaml
perception/: CMakeLists.txt  package.xml  setup.py
perception/config/: recognition.rviz
perception/include/perception/: box_fitter.h  crop.h  downsample.h  feature_extraction.h  object.h  object_recognizer.h  segmentation.h  typedefs.h
perception/launch/: point_cloud_demo.launch
perception/src/: box_fitter.cpp  crop.cpp  downsample.cpp  extract_features_main.cpp  feature_extraction.cpp  object_recognizer.cpp  point_cloud_demo.cpp  save_cloud_main.cpp  segmentation.cpp
perception/src/perception/: __init__.py  mock_camera.py
perception_msgs/: CMakeLists.txt  package.xml
perception_msgs/msg/: ObjectFeatures.msg
web_teleop/frontend/: README.md  bower.json  index.html  manifest.json
web_teleop/frontend/src/: web-teleop-app.html
web_teleop/frontend/test/web-teleop-app/: web-teleop-app_test.html
