<?xml version="1.0"?>
<package format="2">
  <name>applications</name>
  <version>0.1.0</version>
  <description>Applications for CSE 481C</description>
  <maintainer email="jstn@todo.todo">jstn</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>
