<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>simple_grasping</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
